[gd_scene load_steps=14 format=3 uid="uid://702o3tls624e"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_jgehe"]
[ext_resource type="Texture2D" uid="uid://pd45atcqjjfu" path="res://Assets/UI/Texture/TitleBar.png" id="1_q044c"]
[ext_resource type="Script" path="res://Script/UI/ForgeRoom.gd" id="2_le0yr"]
[ext_resource type="Texture2D" uid="uid://dtkji1da2ltep" path="res://Assets/UI/Texture/Club.png" id="2_lrnb3"]
[ext_resource type="PackedScene" uid="uid://bwegnxa4rtgh2" path="res://Scene/UI/TitleBar.tscn" id="3_gc5le"]
[ext_resource type="LabelSettings" uid="uid://c1lap0u84heih" path="res://Assets/LabelSetting/UITitle.tres" id="3_spcq0"]
[ext_resource type="LabelSettings" uid="uid://buvwr4pla8wi1" path="res://Assets/LabelSetting/BigWhite.tres" id="5_b0m8w"]
[ext_resource type="PackedScene" uid="uid://by1vhdyin8n8" path="res://Scene/UI/ForgeAffix.tscn" id="7_j3gyy"]
[ext_resource type="PackedScene" uid="uid://to6wvbxby0e3" path="res://Scene/UI/CoinsPanel.tscn" id="8_t1ta8"]
[ext_resource type="Script" path="res://Script/UI/SelectItem.gd" id="9_stcic"]
[ext_resource type="PackedScene" uid="uid://bbs8ucocbh5vk" path="res://Scene/UI/CostItem.tscn" id="9_x86y3"]
[ext_resource type="PackedScene" uid="uid://bbp1iqow5k0b3" path="res://Scene/UI/ItemToolTip.tscn" id="10_jdoih"]
[ext_resource type="Script" path="res://Scene/UI/ForgedTooltips.gd" id="10_nqlei"]

[node name="ForgeRoom" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jgehe")
script = ExtResource("2_le0yr")

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 150
theme_override_constants/margin_bottom = 150

[node name="Panel" type="Panel" parent="Content"]
layout_mode = 2
theme_type_variation = &"SharpPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" parent="Content/Panel/VBoxContainer" instance=ExtResource("3_gc5le")]
layout_mode = 2
title_text = "打造装备"

[node name="MarginContainer2" type="MarginContainer" parent="Content/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tabs_visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SelectItemBtn" type="Button" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/HBoxContainer/Panel/ItemIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"EmptyBtn"

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="RateLabel" type="Label" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("5_b0m8w")

[node name="ItemNameLabel" type="Label" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "选择装备"
label_settings = ExtResource("3_spcq0")
horizontal_alignment = 1

[node name="Affixs" type="VBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs"]
layout_mode = 2
text = "词缀"
label_settings = ExtResource("3_spcq0")

[node name="VBoxContainer2" type="VBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50

[node name="PreAffixs" type="VBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="ForgeAffix" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs/VBoxContainer2/PreAffixs" instance=ExtResource("7_j3gyy")]
layout_mode = 2

[node name="ForgeAffix2" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs/VBoxContainer2/PreAffixs" instance=ExtResource("7_j3gyy")]
layout_mode = 2

[node name="ForgeAffix3" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs/VBoxContainer2/PreAffixs" instance=ExtResource("7_j3gyy")]
layout_mode = 2

[node name="BufAffixs" type="VBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="ForgeAffix" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs/VBoxContainer2/BufAffixs" instance=ExtResource("7_j3gyy")]
layout_mode = 2

[node name="ForgeAffix2" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs/VBoxContainer2/BufAffixs" instance=ExtResource("7_j3gyy")]
layout_mode = 2

[node name="ForgeAffix3" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/Affixs/VBoxContainer2/BufAffixs" instance=ExtResource("7_j3gyy")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "消耗"
label_settings = ExtResource("3_spcq0")

[node name="MarginContainer" type="MarginContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Cost1" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("9_x86y3")]
unique_name_in_owner = true
layout_mode = 2

[node name="Cost2" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("9_x86y3")]
unique_name_in_owner = true
layout_mode = 2

[node name="Cost3" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("9_x86y3")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 20

[node name="CoinsPanel" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_t1ta8")]
layout_mode = 2
target = "moneys[white]"

[node name="CoinsPanel2" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_t1ta8")]
layout_mode = 2
target = "moneys[blue]"

[node name="CoinsPanel3" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_t1ta8")]
layout_mode = 2
target = "moneys[purple]"

[node name="CoinsPanel4" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_t1ta8")]
layout_mode = 2
target = "moneys[yellow]"

[node name="MarginContainer" type="MarginContainer" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer"]
layout_mode = 2

[node name="ForgeBtn" type="Button" parent="Content/Panel/VBoxContainer/MarginContainer2/VBoxContainer/TabContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "打造"

[node name="SelectItem" type="MarginContainer" parent="." node_paths=PackedStringArray("forge_room")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100
script = ExtResource("9_stcic")
forge_room = NodePath("..")

[node name="Panel" type="Panel" parent="SelectItem"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SelectItem/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SelectItem/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="STitleBar" parent="SelectItem/Panel/VBoxContainer/VBoxContainer" instance=ExtResource("3_gc5le")]
unique_name_in_owner = true
layout_mode = 2
title_text = "打造装备"

[node name="SItems" type="GridContainer" parent="SelectItem/Panel/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 6

[node name="VBoxContainer" type="VBoxContainer" parent="SelectItem/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SYesBtn" type="Button" parent="SelectItem/Panel/VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "确认"

[node name="Tooltips" type="MarginContainer" parent="." node_paths=PackedStringArray("forged_panel")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 500
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 500
script = ExtResource("10_nqlei")
forged_panel = NodePath("..")

[node name="Panel" type="Panel" parent="Tooltips"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltips/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="NinePatchRect" parent="Tooltips/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
texture = ExtResource("1_q044c")
patch_margin_left = 56
patch_margin_top = 8
patch_margin_right = 56
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="Tooltips/Panel/VBoxContainer/TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Tooltips/Panel/VBoxContainer/TitleBar/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Tooltips/Panel/VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_lrnb3")
stretch_mode = 3

[node name="Space" type="Control" parent="Tooltips/Panel/VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Tooltips/Panel/VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "打造装备"
label_settings = ExtResource("3_spcq0")
horizontal_alignment = 1

[node name="Space2" type="Control" parent="Tooltips/Panel/VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect2" type="TextureRect" parent="Tooltips/Panel/VBoxContainer/TitleBar/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_lrnb3")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltips/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Tooltips/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 100

[node name="Tooltips" type="HBoxContainer" parent="Tooltips/Panel/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OriginTooltip" parent="Tooltips/Panel/VBoxContainer/VBoxContainer/MarginContainer/Tooltips" instance=ExtResource("10_jdoih")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
hide_yes_btn = true

[node name="ForgedTooltip" parent="Tooltips/Panel/VBoxContainer/VBoxContainer/MarginContainer/Tooltips" instance=ExtResource("10_jdoih")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
hide_yes_btn = true

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltips/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AYesBtn" type="Button" parent="Tooltips/Panel/VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "确认"

[node name="ACancelBtn" type="Button" parent="Tooltips/Panel/VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "返回"
